# robot_navigation_bp

./: .rosinstall  .rosinstall.bak  README.md  frames.gv
improved_dwa_local_planner/: CMakeLists.txt  package.xml  planner_plugins.xml
improved_dwa_local_planner/include/improved_dwa_local_planner/: improved_dwa_local_planner.h
improved_dwa_local_planner/src/: improved_dwa_local_planner.cpp
my_robot_navigation/: CMakeLists.txt  package.xml
my_robot_navigation/config/: costmap_common_params.yaml  dwa_local_planner.yaml  ekf.yaml  global_costmap_params.yaml  improved_dwa_params.yaml  laser_self_filter.yaml  local_costmap_params.yaml  move_base_params.yaml  my_robot.lua  rosconsole.conf  slam_gmapping.yaml  slam_toolbox_params.yaml
my_robot_navigation/description/: CMakeLists.txt  package.xml
my_robot_navigation/description/urdf/: base_macro.urdf.xacro  camera_macro.urdf.xacro  imu_macro.urdf.xacro  lidar_macro.urdf.xacro  materials.urdf.xacro  robot.plugins.xacro  robot.urdf.xacro  test_robot.urdf.xacro  ultrasonic_sensor_macro.urdf.xacro  wheel_macro.urdf.xacro
my_robot_navigation/gazebo/: CMakeLists.txt  package.xml
my_robot_navigation/gazebo/rviz/: config.rviz
my_robot_navigation/gazebo/worlds/: baylands.world  baylands_photo_shoot_1.world  baylands_photo_shoot_2.world  corridor.world  empty_test.yaml  example.world  turtlebot3_world.world
my_robot_navigation/launch/: debug_launch.launch  gazebo.launch  move_base.launch  robot.launch  robot_spawn.launch
my_robot_navigation/msg/: DynamicObstacle.msg  DynamicObstacleArray.msg
my_robot_navigation/nodes/: move_sphere.py  scan_static_filter.py
